MyPaint: accept brushes serialized as KPP and fix their names

BUG: 439817